2009-11-05  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Change default ac-sources.

2009-10-31  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el: Add .emacs.d and it's subdirs to load-path.

2009-10-27  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Turn on eldoc-mode for emacs-lisp-mode and python-mode.

2009-09-25  Meteor Liu  <meteor1113@gmail.com>

	* init-rope.el (ropemacs-enable-autoimport): Delete.

	* init-misc.el (python-mode-hook): Merge init-rope.el to init-misc.el.

	* init-winnt.el (include-dirs): Add system include dirs for c-mode.

	* init-misc.el: Now can compatible with yasnippet.el.
	(require): Add some auto-complete initialize.
	(require): Let c-mode use auto-complete-cpp.

	* init-site.el (require): Rename init-cedet.el to init-site.el.
	(require): Merge init-jde.el to init-site.el.

2009-09-23  Meteor Liu  <meteor1113@gmail.com>

	* init-mac.el: Delete.

	* lisp/pysmell.el: Delete.

	* lisp/company/company-ropemacs.el (company-ropemacs): Change (company-pysmell--grab-symbol) to (company-ropemacs--grab-symbol).

2009-09-17  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (org-mode-hook): Add (setq comment-start nil) for org-mode.

2009-09-15  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Set key for comment-or-uncomment-region.

2009-09-04  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: use yasnippet in org-mode for yasnippet-0.6.1b.(from joaotavora)

2009-09-01  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (nxml-mode-hook): Make nxml-mode can show <> in show-paren-mode.

2009-08-28  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Add nxml setting.

2009-08-26  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Add (setq cua-keep-region-after-copy t).
	: Add (display-time-mode t).

2009-08-24  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (perl-mode-hook): Setup for perl-mode and cperl-mode.

	* lisp/auto-complete/auto-complete.el: Upgrade to 0.3.0 alpha.
