@@ -1,3 +1,7 @@
+2009-11-06  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-site.el (require): Add (require 'eassist nil t).
+
 2009-11-05  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-misc.el: Change default ac-sources.
